--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "web-server",
+  "engings":{
+    "node":"22.17.1",
+    "npm":"10,9.2"
+  },
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start":"node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
